	see how fast nbshell loads.

	* nbshell/Sheet.py:
	* nbshell/ipnDocument.py: Deleted some unnecessary code and
	changed Sheet.Clear() a little, which slightly decreased loading
	time.

	* IPython/tzanko/genutils.py (IOStream.write): Managed to reach
	code which noone has run before in write(), and found and fixed a
	small bug there.
	

2005-09-10  Tzanko Matev  <tsanko at gmail dot com>

	* nbdoc/notebook.py (Notebook.default_sheet): Changed behaviour so
	it doesn't put the zero cell in the default sheet.

	* nbshell/IPythonLog.py (IPythonLog.__init__): Reverted Fernando's
	changes about the In[0] cell. We need to allow the user to choose
	if they need plotting turned on, and which library to use by
	default, maybe through an additional File->New menu. Also we
	should store the default settings in a configuration file. But the
	actual initialization code must be in the notebook.

	* nbshell/PythonPlugin.py (PythonNotebookViewPlugin.Update):
	Reverted part of Fernando's changes and added a comment why the
	strange code was needed.
	
2005-09-10  Fernando Perez  <Fernando.Perez@colorado.edu>

	* nbshell/plotting_backends/matplotlib_backend.py
	(PlotLibraryInterface.grab_png): Added dpi and number options to
	grab_png and grab_figure.

	* nbshell/PythonPlugin.py (PythonNotebookViewPlugin.Update):
	Removed code which was causing the spurious newline problem.  I
	cut out a whole section which seemed a no-op to me.  Tzanko: please
	double check that I didn't screw up (I'm just starting to learn
	the code).

2005-09-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* nbshell/PythonPlugin.py (PythonNotebookViewPlugin.__init__): Set
	the in/out prompt templates to an instance variable.  Eventually
	we'll need to support the dynamic ipython prompts, but only once
	they've been abstracted out from their current tangled mess.  At
	least now this gives slightly cleaner code which is consistent
	with previous (default) ipython.
